Fixed bug #44075 (strtok misbehaving on unicode string)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@269626 c90b9560-bf6c-de11-be94-00142212c4b1